feature/content_table : table align

--- a/pages/day00.html
+++ b/pages/day00.html
@@ -154,21 +154,30 @@
             <table class="content__table">
               <thead class="content__table--thead text-bold">
                 <tr class="content__table--tr">
-                  <th>Exercise 00</th>
+                  <th colspan="2">Exercise 00</th>
                 </tr>
               </thead>
               <tbody class="content__table--tbody">
                 <tr class="content__table--tr content__table--ex-name">
-                  <td class="content__table--td">Hello World!</td>
+                  <td colspan="2" class="content__table--td">Hello World!</td>
                 </tr>
                 <tr class="content__table--tr">
-                  <td class="content__table--td">제출 디렉토리 : ex00/</td>
+                  <td class="content__table--td">제출 디렉토리</td>
+                  <td class="content__table--td-data">
+                    :&nbsp&nbsp&nbsp&nbspex00/
+                  </td>
                 </tr>
                 <tr class="content__table--tr">
-                  <td class="content__table--td">제출 파일 : index.html</td>
+                  <td class="content__table--td">제출 파일</td>
+                  <td class="content__table--td-data">
+                    :&nbsp&nbsp&nbsp&nbspindex.html
+                  </td>
                 </tr>
                 <tr class="content__table--tr">
-                  <td class="content__table--td">허용 태그 : NONE</td>
+                  <td class="content__table--td">허용 태그</td>
+                  <td class="content__table--td-data">
+                    :&nbsp&nbsp&nbsp&nbspNONE
+                  </td>
                 </tr>
               </tbody>
             </table>
@@ -186,24 +195,31 @@
             <table class="content__table">
               <thead class="content__table--thead text-bold">
                 <tr class="content__table--tr">
-                  <th>Exercise 01</th>
+                  <th colspan="2">Exercise 01</th>
                 </tr>
               </thead>
               <tbody class="content__table--tbody">
                 <tr class="content__table--tr content__table--ex-name">
-                  <td class="content__table--td">
+                  <td colspan="2" class="content__table--td">
                     Hellooooooo Worldddddddd!!!
                   </td>
                 </tr>
                 <tr class="content__table--tr">
-                  <td class="content__table--td">제출 디렉토리 : ex01/</td>
+                  <td class="content__table--td">제출 디렉토리</td>
+                  <td class="content__table--td-data">
+                    :&nbsp&nbsp&nbsp&nbspex01/
+                  </td>
                 </tr>
                 <tr class="content__table--tr">
-                  <td class="content__table--td">제출 파일 : index.html</td>
+                  <td class="content__table--td">제출 파일</td>
+                  <td class="content__table--td-data">
+                    :&nbsp&nbsp&nbsp&nbspindex.html
+                  </td>
                 </tr>
                 <tr class="content__table--tr">
-                  <td class="content__table--td">
-                    허용 태그 : span, h1, h2, h3, h4, h5, h6
+                  <td class="content__table--td">허용 태그</td>
+                  <td class="content__table--td-data">
+                    :&nbsp&nbsp&nbsp&nbspspan, h1, h2, h3, h4, h5, h6
                   </td>
                 </tr>
               </tbody>
@@ -213,7 +229,9 @@
             </ul>
             <img class="content__img" src="../assets/day00/ex01.png" />
           </section>
+
           <hr class="horiz-divider" />
+
           <section class="content__section">
             <h3 class="content__subhead xlarge text-bold">
               Exercise 02 : Chick-to-Chicken
@@ -221,21 +239,32 @@
             <table class="content__table">
               <thead class="content__table--thead text-bold">
                 <tr class="content__table--tr">
-                  <th>Exercise 02</th>
+                  <th colspan="2">Exercise 02</th>
                 </tr>
               </thead>
               <tbody class="content__table--tbody">
                 <tr class="content__table--tr content__table--ex-name">
-                  <td class="content__table--td">Chick-to-Chicken</td>
+                  <td colspan="2" class="content__table--td">
+                    Chick-to-Chicken
+                  </td>
                 </tr>
                 <tr class="content__table--tr">
-                  <td class="content__table--td">제출 디렉토리 : ex02/</td>
+                  <td class="content__table--td">제출 디렉토리</td>
+                  <td class="content__table--td-data">
+                    :&nbsp&nbsp&nbsp&nbspex02/
+                  </td>
                 </tr>
                 <tr class="content__table--tr">
-                  <td class="content__table--td">제출 파일 : index.html</td>
+                  <td class="content__table--td">제출 파일</td>
+                  <td class="content__table--td-data">
+                    :&nbsp&nbsp&nbsp&nbspindex.html
+                  </td>
                 </tr>
                 <tr class="content__table--tr">
-                  <td class="content__table--td">허용 태그 : span, p, img</td>
+                  <td class="content__table--td">허용 태그</td>
+                  <td class="content__table--td-data">
+                    :&nbsp&nbsp&nbsp&nbspspan, p, img
+                  </td>
                 </tr>
               </tbody>
             </table>
@@ -254,22 +283,31 @@
             <table class="content__table">
               <thead class="content__table--thead text-bold">
                 <tr class="content__table--tr">
-                  <th>Exercise 03</th>
+                  <th colspan="2">Exercise 03</th>
                 </tr>
               </thead>
               <tbody class="content__table--tbody">
                 <tr class="content__table--tr content__table--ex-name">
-                  <td class="content__table--td">Let me introduce myself...</td>
+                  <td colspan="2" class="content__table--td">
+                    Let me introduce myself...
+                  </td>
                 </tr>
                 <tr class="content__table--tr">
-                  <td class="content__table--td">제출 디렉토리 : ex03/</td>
+                  <td class="content__table--td">제출 디렉토리</td>
+                  <td class="content__table--td-data">
+                    :&nbsp&nbsp&nbsp&nbspex03/
+                  </td>
                 </tr>
                 <tr class="content__table--tr">
-                  <td class="content__table--td">제출 파일 : index.html</td>
+                  <td class="content__table--td">제출 파일</td>
+                  <td class="content__table--td-data">
+                    :&nbsp&nbsp&nbsp&nbspindex.html
+                  </td>
                 </tr>
                 <tr class="content__table--tr">
-                  <td class="content__table--td">
-                    허용 태그 : a, form, div, label, span, input
+                  <td class="content__table--td">허용 태그</td>
+                  <td class="content__table--td-data">
+                    :&nbsp&nbsp&nbsp&nbspa, form, div, label, span, input
                   </td>
                 </tr>
               </tbody>
@@ -295,23 +333,30 @@
             <table class="content__table">
               <thead class="content__table--thead text-bold">
                 <tr class="content__table--tr">
-                  <th>Exercise 04</th>
+                  <th colspan="2">Exercise 04</th>
                 </tr>
               </thead>
               <tbody class="content__table--tbody">
                 <tr class="content__table--tr content__table--ex-name">
-                  <td class="content__table--td">Welcome to 42</td>
+                  <td colspan="2" class="content__table--td">Welcome to 42</td>
                 </tr>
                 <tr class="content__table--tr">
-                  <td class="content__table--td">제출 디렉토리 : ex04/</td>
+                  <td class="content__table--td">제출 디렉토리</td>
+                  <td class="content__table--td-data">
+                    :&nbsp&nbsp&nbsp&nbspex04/
+                  </td>
                 </tr>
                 <tr class="content__table--tr">
-                  <td class="content__table--td">제출 파일 : index.html</td>
+                  <td class="content__table--td">제출 파일</td>
+                  <td class="content__table--td-data">
+                    :&nbsp&nbsp&nbsp&nbspindex.html
+                  </td>
                 </tr>
                 <tr class="content__table--tr">
-                  <td class="content__table--td">
-                    허용 태그 : h2, table, thead, th, tbody, td, tfoot, ol, li,
-                    ul
+                  <td class="content__table--td">허용 태그</td>
+                  <td class="content__table--td-data">
+                    :&nbsp&nbsp&nbsp&nbsph2, table, thead, th, tbody, td, tfoot,
+                    ol, li, ul
                   </td>
                 </tr>
               </tbody>
@@ -332,28 +377,34 @@
             <table class="content__table">
               <thead class="content__table--thead text-bold">
                 <tr class="content__table--tr">
-                  <th>Exercise 05</th>
+                  <th colspan="2">Exercise 05</th>
                 </tr>
               </thead>
               <tbody class="content__table--tbody">
                 <tr class="content__table--tr content__table--ex-name">
-                  <td class="content__table--td">Beautiful Star</td>
+                  <td colspan="2" class="content__table--td">Beautiful Star</td>
                 </tr>
                 <tr class="content__table--tr">
-                  <td class="content__table--td">제출 디렉토리 : ex05/</td>
+                  <td class="content__table--td">제출 디렉토리</td>
+                  <td class="content__table--td-data">
+                    :&nbsp&nbsp&nbsp&nbspex05/
+                  </td>
                 </tr>
                 <tr class="content__table--tr">
-                  <td class="content__table--td">제출 파일 : index.html</td>
+                  <td class="content__table--td">제출 파일</td>
+                  <td class="content__table--td-data">
+                    :&nbsp&nbsp&nbsp&nbspindex.html
+                  </td>
                 </tr>
                 <tr class="content__table--tr">
-                  <td class="content__table--td">허용 태그 : img, map, area</td>
+                  <td class="content__table--td">허용 태그</td>
+                  <td class="content__table--td-data">
+                    :&nbsp&nbsp&nbsp&nbspimg, map, area
+                  </td>
                 </tr>
               </tbody>
             </table>
             <ul class="content__list">
-              <li>제출 디렉토리: ex05/</li>
-              <li>제출 파일: index.html</li>
-              <li>허용 태그: img, map, area</li>
               <li>
                 별의 다섯 꼭짓점을 클릭하면 다른 페이지로 이동하는 페이지를
                 만드세요.
