--- a/pages/rush.html
+++ b/pages/rush.html
@@ -8,14 +8,19 @@
     <title>HTML & CSS PISCINE | RUSH</title>
     <meta name="description" content="42 HTML & CSS Piscine Rush Subject" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="../css/project_desktop.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      media="screen and (max-width: 768px)"
+      href="../css/mobile.css"
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons+Filled"
+      media="screen and (min-width: 769px)"
+      href="../css/home_desktop.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <link
       rel="stylesheet"
