--- a/pages/day02.html
+++ b/pages/day02.html
@@ -8,7 +8,16 @@
     <title>HTML & CSS PISCINE | DAY02</title>
     <meta name="description" content="42 HTML & CSS Piscine Day02 Subject" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="../css/project_desktop.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 768px)"
+      href="../css/mobile.css"
+    />
+    <link
+      rel="stylesheet"
+      media="screen and (min-width: 769px)"
+      href="../css/home_desktop.css"
+    />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
