--- a/pages/day00.html
+++ b/pages/day00.html
@@ -335,6 +335,11 @@
                 42 intra 글자를 클릭하면 새 창에서 https://intra.42.fr 이
                 열립니다.
               </li>
+              <li>
+                Write your MBTI에는 원래 텍스트를 입력할 수 있지만 막아둡시다.
+              </li>
+              <li>Reset 클릭 시 입력한 정보가 초기화 됩니다.</li>
+              <li>Send 클릭 시 입력한 정보가 서버로 전송됩니다.</li>
               <li>아래와 같이 페이지에 출력하세요.</li>
             </ul>
             <img class="content__img" src="../assets/day00/ex03.png" />
