feature/subject : edit DAY00 ex03 : add 허용 태그

--- a/pages/day00.html
+++ b/pages/day00.html
@@ -323,7 +323,8 @@
                 <tr class="content__table--tr">
                   <td class="content__table--td">허용 태그</td>
                   <td class="content__table--td-data">
-                    :&nbsp&nbsp&nbsp&nbspa, form, div, label, span, input
+                    :&nbsp&nbsp&nbsp&nbspa, form, div, label, span, input,
+                    textarea
                   </td>
                 </tr>
               </tbody>
