--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link
       rel="stylesheet"
       media="screen and (max-width: 768px)"
-      href="css/mobile.css"
+      href="../css/mobile.css"
     />
     <link
       rel="stylesheet"
       media="screen and (min-width: 769px)"
-      href="css/home_desktop.css"
+      href="../css/home_desktop.css"
     />
     <link
       rel="stylesheet"
@@ -104,9 +104,43 @@
           />
         </a>
         <label for="mobile-nav" class="header__nav--label hidden-desktop">
-          <i class="material-icons md-nav-icon">menu</i>
+          <i class="material-icons md-menu-icon">menu</i>
         </label>
-        <input type="checkbox" id="mobile-nav" class="hidden-desktop" />
+        <input
+          type="checkbox"
+          id="mobile-nav"
+          class="hidden-desktop hidden-mobile"
+        />
+        <ul id="mobile-nav--toggle" class="hidden-desktop">
+          <li class="mobile-nav__page xlarge">
+            <a href="index.html">About</a>
+          </li>
+          <li class="mobile-nav__page xlarge">Project</li>
+          <ul class="mobile-nav__page--projects large">
+            <li class="page--projects">
+              <a href="pages/day00.html">DAY00</a>
+            </li>
+            <li class="page--projects">
+              <a href="pages/day01.html">DAY01</a>
+            </li>
+            <li class="page--projects">
+              <a href="pages/day02.html">DAY02</a>
+            </li>
+            <li class="page--projects">
+              <a href="pages/day03.html">DAY03</a>
+            </li>
+            <li class="page--projects">
+              <a href="pages/day04.html">DAY04</a>
+            </li>
+            <li class="page--projects">
+              <a href="pages/day05.html">DAY05</a>
+            </li>
+            <li class="page--projects"><a href="pages/rush.html">RUSH</a></li>
+          </ul>
+          <li class="mobile-nav__page xlarge">
+            <a href="pages/guideline.html">Guideline</a>
+          </li>
+        </ul>
         <a href="index.html">
           <div class="header__content">
             <h2 class="header-content__title">HTML & CSS Piscine</h2>
