--- a/pages/day05.html
+++ b/pages/day05.html
@@ -16,7 +16,7 @@
     <link
       rel="stylesheet"
       media="screen and (min-width: 769px)"
-      href="../css/home_desktop.css"
+      href="../css/project_desktop.css"
     />
     <link
       rel="stylesheet"
