--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link
       rel="stylesheet"
       media="screen and (max-width: 768px)"
-      href="../css/mobile.css"
+      href="css/mobile.css"
     />
     <link
       rel="stylesheet"
       media="screen and (min-width: 769px)"
-      href="../css/home_desktop.css"
+      href="css/home_desktop.css"
     />
     <link
       rel="stylesheet"
