feature/mobile_layout : mobile view draft

--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
           class="hidden-desktop hidden-mobile"
         />
         <ul id="mobile-nav--toggle" class="hidden-desktop">
-          <li class="mobile-nav__page xlarge">
+          <li class="mobile-nav__page large text-bold">
             <a href="index.html">About</a>
           </li>
-          <li class="mobile-nav__page xlarge">Project</li>
-          <ul class="mobile-nav__page--projects large">
+          <li class="mobile-nav__page large text-bold">Project</li>
+          <ul class="mobile-nav__page--projects">
             <li class="page--projects">
               <a href="pages/day00.html">DAY00</a>
             </li>
@@ -137,14 +137,17 @@
             </li>
             <li class="page--projects"><a href="pages/rush.html">RUSH</a></li>
           </ul>
-          <li class="mobile-nav__page xlarge">
+          <li class="mobile-nav__page large text-bold">
             <a href="pages/guideline.html">Guideline</a>
           </li>
         </ul>
         <a href="index.html">
           <div class="header__content">
             <h2 class="header-content__title">HTML & CSS Piscine</h2>
-            <img class="header-content__img" src="assets/header_chick.jpg" />
+            <img
+              class="header-content__img hidden-mobile"
+              src="assets/header_chick.jpg"
+            />
           </div>
         </a>
       </header>
