--- a/pages/day00.html
+++ b/pages/day00.html
@@ -146,7 +146,10 @@
         <a href="../index.html">
           <div class="header__content">
             <h2 class="header-content__title">HTML & CSS Piscine</h2>
-            <img class="header-content__img" src="../assets/header_chick.jpg" />
+            <img
+              class="header-content__img hidden-mobile"
+              src="../assets/header_chick.jpg"
+            />
           </div>
         </a>
       </header>
