--- a/pages/day01.html
+++ b/pages/day01.html
@@ -98,9 +98,58 @@
 
       <header class="layout__header">
         <a href="../index.html">
+          <img
+            class="header__logo hidden-desktop"
+            src="../assets/42_logo_nav.svg"
+          />
+        </a>
+        <label for="mobile-nav" class="header__nav--label hidden-desktop">
+          <i class="material-icons md-menu-icon">menu</i>
+        </label>
+        <input
+          type="checkbox"
+          id="mobile-nav"
+          class="hidden-desktop hidden-mobile"
+        />
+        <ul id="mobile-nav--toggle" class="hidden-desktop">
+          <li class="mobile-nav__page xlarge">
+            <a href="../index.html">About</a>
+          </li>
+          <li class="mobile-nav__page xlarge">Project</li>
+          <ul class="mobile-nav__page--projects large">
+            <li class="page--projects">
+              <a href="../pages/day00.html">DAY00</a>
+            </li>
+            <li class="page--projects">
+              <a href="../pages/day01.html">DAY01</a>
+            </li>
+            <li class="page--projects">
+              <a href="../pages/day02.html">DAY02</a>
+            </li>
+            <li class="page--projects">
+              <a href="../pages/day03.html">DAY03</a>
+            </li>
+            <li class="page--projects">
+              <a href="../pages/day04.html">DAY04</a>
+            </li>
+            <li class="page--projects">
+              <a href="../pages/day05.html">DAY05</a>
+            </li>
+            <li class="page--projects">
+              <a href="../pages/rush.html">RUSH</a>
+            </li>
+          </ul>
+          <li class="mobile-nav__page xlarge">
+            <a href="../pages/guideline.html">Guideline</a>
+          </li>
+        </ul>
+        <a href="../index.html">
           <div class="header__content">
             <h2 class="header-content__title">HTML & CSS Piscine</h2>
-            <img class="header-content__img" src="../assets/header_chick.jpg" />
+            <img
+              class="header-content__img hidden-mobile"
+              src="../assets/header_chick.jpg"
+            />
           </div>
         </a>
       </header>
