feature/mobile_layout : header text size adjustment

--- a/pages/guideline.html
+++ b/pages/guideline.html
@@ -139,6 +139,7 @@
             <a href="../pages/guideline.html">Guideline</a>
           </li>
         </ul>
+        <div class="header__empty hidden-desktop"></div>
         <a href="../index.html">
           <div class="header__content">
             <h2 class="header-content__title">HTML & CSS Piscine</h2>
