feature/mobile_layout : mobile view draft v2

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           id="mobile-nav"
           class="hidden-desktop hidden-mobile"
         />
-        <ul id="mobile-nav--toggle" class="hidden-desktop">
+        <ul class="header__mobile-nav--toggle hidden-desktop">
           <li class="mobile-nav__page large text-bold">
             <a href="index.html">About</a>
           </li>
