--- a/pages/day02.html
+++ b/pages/day02.html
@@ -30,7 +30,7 @@
 
   <body>
     <div class="layout">
-      <nav class="layout__nav">
+      <nav class="layout__nav hidden-mobile">
         <a href="../index.html"
           ><img src="../assets/42_logo_nav.svg" class="layout__nav--logo"
         /></a>
@@ -53,7 +53,7 @@
         </ul>
       </nav>
 
-      <div class="layout__subnav">
+      <div class="layout__subnav hidden-mobile">
         <div class="subnav__content">
           <ul class="content__fixed--item">
             <li class="fixed--title text-bold"><h3>PROJECTS</h3></li>
@@ -111,7 +111,7 @@
           id="mobile-nav"
           class="hidden-desktop hidden-mobile"
         />
-        <ul id="mobile-nav--toggle" class="hidden-desktop">
+        <ul class="header__mobile-nav--toggle hidden-desktop">
           <li class="mobile-nav__page xlarge">
             <a href="../index.html">About</a>
           </li>
