--- a/pages/guideline.html
+++ b/pages/guideline.html
@@ -107,7 +107,7 @@
           id="mobile-nav"
           class="hidden-desktop hidden-mobile"
         />
-        <ul id="mobile-nav--toggle" class="hidden-desktop">
+        <ul class="header__mobile-nav--toggle hidden-desktop">
           <li class="mobile-nav__page xlarge">
             <a href="../index.html">About</a>
           </li>
