--- a/pages/guideline.html
+++ b/pages/guideline.html
@@ -45,47 +45,50 @@
               <i class="material-icons-outlined md-nav-icon">hub</i>
             </label>
             <input type="checkbox" id="subnav" />
-            <ul id="subnav--toggle">
+            <ul class="subnav--toggle">
               <li class="subnav--toggle__title text-bold"><h3>PROJECTS</h3></li>
               <li class="subnav--toggle__subject">
-                <a href="../pages/day00.html"
-                  ><i class="material-icons md-subnav-icon">egg</i>DAY00</a
+                <a href="day00.html"
+                  ><i class="material-icons md-subnav-icon">egg</i
+                  >&nbsp;DAY00</a
                 >
               </li>
               <li class="subnav--toggle__subject">
-                <a href="../pages/day01.html"
-                  ><i class="material-icons md-subnav-icon">egg</i>DAY01</a
+                <a href="day01.html"
+                  ><i class="material-icons md-subnav-icon">egg</i
+                  >&nbsp;DAY01</a
                 >
               </li>
               <li class="subnav--toggle__subject">
-                <a href="../pages/day02.html"
-                  ><i class="material-icons md-subnav-icon">egg</i>DAY02</a
+                <a href="day02.html"
+                  ><i class="material-icons md-subnav-icon">egg</i
+                  >&nbsp;DAY02</a
                 >
               </li>
               <li class="subnav--toggle__subject">
-                <a href="../pages/day03.html"
+                <a href="day03.html"
                   ><i class="material-icons md-subnav-icon">egg</i>DAY03</a
                 >
               </li>
               <li class="subnav--toggle__subject">
-                <a href="../pages/day04.html"
+                <a href="day04.html"
                   ><i class="material-icons md-subnav-icon">egg</i>DAY04</a
                 >
               </li>
               <li class="subnav--toggle__subject">
-                <a href="../pages/day05.html"
+                <a href="day05.html"
                   ><i class="material-icons md-subnav-icon">egg</i>DAY05</a
                 >
               </li>
               <li class="subnav--toggle__subject">
-                <a href="../pages/rush.html"
+                <a href="rush.html"
                   ><i class="material-icons md-subnav-icon">egg</i>RUSH</a
                 >
               </li>
             </ul>
           </li>
           <li class="nav__items--icon">
-            <a href="../pages/guideline.html"
+            <a href="guideline.html"
               ><i class="material-icons-outlined md-nav-icon">explore</i></a
             >
           </li>
@@ -114,29 +117,29 @@
           <li class="mobile-nav__page xlarge">Project</li>
           <ul class="mobile-nav__page--projects large">
             <li class="page--projects">
-              <a href="../pages/day00.html">DAY00</a>
+              <a href="day00.html">DAY00</a>
             </li>
             <li class="page--projects">
-              <a href="../pages/day01.html">DAY01</a>
+              <a href="day01.html">DAY01</a>
             </li>
             <li class="page--projects">
-              <a href="../pages/day02.html">DAY02</a>
+              <a href="day02.html">DAY02</a>
             </li>
             <li class="page--projects">
-              <a href="../pages/day03.html">DAY03</a>
+              <a href="day03.html">DAY03</a>
             </li>
             <li class="page--projects">
-              <a href="../pages/day04.html">DAY04</a>
+              <a href="day04.html">DAY04</a>
             </li>
             <li class="page--projects">
-              <a href="../pages/day05.html">DAY05</a>
+              <a href="day05.html">DAY05</a>
             </li>
             <li class="page--projects">
-              <a href="../pages/rush.html">RUSH</a>
+              <a href="rush.html">RUSH</a>
             </li>
           </ul>
           <li class="mobile-nav__page xlarge">
-            <a href="../pages/guideline.html">Guideline</a>
+            <a href="guideline.html">Guideline</a>
           </li>
         </ul>
         <div class="header__empty hidden-desktop"></div>
