--- a/index.html
+++ b/index.html
@@ -71,22 +71,25 @@
               </li>
               <li class="subnav--toggle__subject">
                 <a href="pages/day03.html"
-                  ><i class="material-icons md-subnav-icon">egg</i>DAY03</a
+                  ><i class="material-icons md-subnav-icon">egg</i
+                  >&nbsp;DAY03</a
                 >
               </li>
               <li class="subnav--toggle__subject">
                 <a href="pages/day04.html"
-                  ><i class="material-icons md-subnav-icon">egg</i>DAY04</a
+                  ><i class="material-icons md-subnav-icon">egg</i
+                  >&nbsp;DAY04</a
                 >
               </li>
               <li class="subnav--toggle__subject">
                 <a href="pages/day05.html"
-                  ><i class="material-icons md-subnav-icon">egg</i>DAY05</a
+                  ><i class="material-icons md-subnav-icon">egg</i
+                  >&nbsp;DAY05</a
                 >
               </li>
               <li class="subnav--toggle__subject">
                 <a href="pages/rush.html"
-                  ><i class="material-icons md-subnav-icon">egg</i>RUSH</a
+                  ><i class="material-icons md-subnav-icon">egg</i>&nbsp;RUSH</a
                 >
               </li>
             </ul>
