--- a/pages/day04.html
+++ b/pages/day04.html
@@ -118,29 +118,29 @@
           <li class="mobile-nav__page xlarge">Project</li>
           <ul class="mobile-nav__page--projects large">
             <li class="page--projects">
-              <a href="../pages/day00.html">DAY00</a>
+              <a href="day00.html">DAY00</a>
             </li>
             <li class="page--projects">
-              <a href="../pages/day01.html">DAY01</a>
+              <a href="day01.html">DAY01</a>
             </li>
             <li class="page--projects">
-              <a href="../pages/day02.html">DAY02</a>
+              <a href="day02.html">DAY02</a>
             </li>
             <li class="page--projects">
-              <a href="../pages/day03.html">DAY03</a>
+              <a href="day03.html">DAY03</a>
             </li>
             <li class="page--projects">
-              <a href="../pages/day04.html">DAY04</a>
+              <a href="day04.html">DAY04</a>
             </li>
             <li class="page--projects">
-              <a href="../pages/day05.html">DAY05</a>
+              <a href="day05.html">DAY05</a>
             </li>
             <li class="page--projects">
-              <a href="../pages/rush.html">RUSH</a>
+              <a href="rush.html">RUSH</a>
             </li>
           </ul>
           <li class="mobile-nav__page xlarge">
-            <a href="../pages/guideline.html">Guideline</a>
+            <a href="guideline.html">Guideline</a>
           </li>
         </ul>
         <div class="header__empty hidden-desktop"></div>
